web-infras/parser/tests/fixtures/esprima/ES6/for-of/invalid-let-init/output.txt
[SyntaxError]: 'for-of' loop variable declaration may not have an initializer. (1,14)
1|for (let x = 1 of y);
 |            ^
